Refactor notification preferences and related entities to improve structure and consistency